--- a/styles.css
+++ b/styles.css
@@ -272,7 +272,7 @@ header {
 }
 
 
-.search-btn>a {
+.search-btn {
     cursor: pointer;
     display: inline-block;
     padding: 8px;
@@ -284,7 +284,7 @@ header {
     border-radius: 5px;
 }
 
-.search-btn>a:hover {
+.search-btn:hover {
     background: var(--primary-color);
     transform: scale(1.1);
 }
@@ -365,7 +365,7 @@ input[type=checkbox] {
 
     input[type=checkbox]:checked~.menu {
         /* display: block; */
-        max-height: 500px;
+        max-height: 800px;
         opacity: 1;
         visibility: visible;
     }
@@ -410,7 +410,7 @@ input[type=checkbox] {
     }
 
     #mainPage>div:nth-of-type(1) {
-        margin-top: 10rem;
+        margin-top: 0rem;
         flex-direction: column-reverse;
     }
 
